--- a/partials/header.html
+++ b/partials/header.html
@@ -1,20 +1,24 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 <html>
 <head>
+  <title>UBC igem 2018</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 
   <!-- external styelsheet -->
   <link rel="stylesheet" href="../styles/navbar.css">
 
-  <title>UBC igem 2018</title>
 </head>
 <body>
   <!-- navbar -->
@@ -36,48 +40,36 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PROJECT<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
             </ul>
           </li>
           <li><a href="#">MODEL</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">HUMAN PRACTICES<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">TEAM <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">NOTEBOOK <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">PAGE LINK</a></li>
+              <li><a href="#">PAGE LINK</a></li>
             </ul>
           </li>
           <li><a href="#">ACHIEVEMENTS</a></li>
