added home page

--- a/partials/header.html
+++ b/partials/header.html
@@ -19,11 +19,70 @@
   <!-- external styelsheet -->
   <link rel="stylesheet" href="../styles/navbar.css">
 
+  <style>
+  .no-padding {
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+
+  .no-padding-bottom {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  * {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  html, body {
+    height:100%;
+    width:100%;
+  }
+  .imgbox {
+    display: grid;
+    height: 100%;
+  }
+  .center-fit {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
+  }
+  .bgimg {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .no-margin {
+    margin: 0px;
+    box-sizing: content-box;
+  }
+
+  .row {
+    width:100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+  }
+  </style>
+
 </head>
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid no-padding-bottom">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -77,5 +136,25 @@
       </div>
     </div>
   </nav>
+  <div class = "container-fluid no-padding">
+
+    <div class = "bgimg imgbox row no-margin">
+      <img src="../assets/homepage1.jpg">
+
+    </div>
+    <div class = "bgimg imgbox row no-margin">
+      <img src="../assets/homepage2.jpg">
+
+    </div>
+    <div class = "bgimg imgbox row no-margin">
+      <img src="../assets/homepage3.jpg">
+
+    </div>
+    <div class = "bgimg imgbox row no-margin">
+      <img src="../assets/homepage4.jpg">
+
+    </div>
+  </div>
+
 </body>
 </html>
