--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -15,72 +15,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- external styelsheet -->
-  <link rel="stylesheet" href="styles/navbar.css">
-
-  <style>
-  .no-padding {
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-top: 0;
-  }
-
-  .no-padding-bottom {
-    padding-bottom: 0;
-    margin-bottom: 0;
-  }
-
-  * {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  html, body {
-    height:100%;
-    width:100%;
-  }
-  .imgbox {
-    display: grid;
-    height: 100%;
-  }
-  .center-fit {
-    max-width: 100%;
-    max-height: 100%;
-    margin: 0;
-  }
-  .bgimg {
-    height: 100%;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-
-  .no-margin {
-    margin: 0px;
-    box-sizing: content-box;
-  }
-
-  .row {
-    width:100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  img {
-    padding: 0;
-    display: block;
-    margin: 0 auto;
-    max-height: 100%;
-    max-width: 100%;
-  }
-  </style>
+  <link rel="stylesheet" href="../styles/navbar.css">
 
 </head>
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><img id="logo_image" src="assets/logo.png"></a>
+    <a class="navbar-brand" href="#"><img id="logo_image" src="../assets/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -136,18 +77,5 @@
       </ul>
     </div>
   </nav>
-
-  <div class = "container-fluid no-padding">
-    <div class = "bgimg imgbox row no-margin">
-      <img src="assets/homepage1.jpg">
-    </div>
-    <div class = "bgimg imgbox row no-margin">
-      <img src="assets/homepage2.jpg">
-    </div>
-    <div class = "bgimg imgbox row no-margin">
-      <img src="assets/homepage3.jpg">
-    </div>
-  </div>
-
 </body>
 </html>
