--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -9,9 +9,6 @@
 /* navbar */
 .navbar {
   margin-bottom: 0;
-}
-
-.navbar-default {
   background-color: #D9EDEB;
   border-color: #D9EDEB;
 }
@@ -20,7 +17,7 @@
   margin-right: 10px;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar .navbar-nav > li > a {
   font: GeosansLight;
   size: 18pt;
   letter-spacing: 1.5px;
@@ -28,8 +25,8 @@
   color: #808080;
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
+.navbar .navbar-nav > li > a:hover,
+.navbar .navbar-nav > li > a:focus {
   font: GeosansLight;
   size: 18px;
   letter-spacing: 0.5px;
@@ -38,11 +35,20 @@
   background-color: #C4DFDD;
 }
 
-.navbar-default .navbar-nav .dropdown-menu {
+.dropdown-item {
+  display: block;
+  padding: 6px 16px;
+  color: white;
+  text-align: left;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+.navbar .navbar-nav .dropdown-menu {
   font: GeosansLight;
   background-color: #45827A;
   color: white;
-  font-size: 13px;
+  font-size: 14px;
   letter-spacing: 0.4px;
   text-decoration: none;
   width: 160px;
@@ -50,14 +56,9 @@
   padding: 2px 0px;
 }
 
-.navbar-default .navbar-nav .dropdown-menu>li > a {
+.dropdown-item:hover,
+.dropdown-item:focus {
   color: white;
-  text-decoration: none;
-  font-weight: normal;
-}
-
-.navbar-default .navbar-nav .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav .dropdown-menu > li > a:focus {
   background-color: #22645B;
   -webkit-text-stroke: 0.3px;
 }
